docs/api/qiskit-ibm-runtime/0.28/options-noise-learner-options.mdx
---
title: NoiseLearnerOptions (v0.28)
description: API reference for qiskit_ibm_runtime.options.NoiseLearnerOptions in qiskit-ibm-runtime v0.28
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.NoiseLearnerOptions
---

# NoiseLearnerOptions

<Class id="qiskit_ibm_runtime.options.NoiseLearnerOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.28/qiskit_ibm_runtime/options/noise_learner_options.py#L25-L96" signature="NoiseLearnerOptions(*args, **kwargs)" modifiers="class">
  Options for [`NoiseLearner`](noise-learner-noise-learner "qiskit_ibm_runtime.noise_learner.NoiseLearner").

  ## Attributes

  ### environment

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.environment" attributeTypeHint="EnvironmentOptions | Dict" attributeValue="FieldInfo(annotation=Union[EnvironmentOptions, Dict], required=False, default_factory=EnvironmentOptions)" />

  ### experimental

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.experimental" attributeTypeHint="UnsetType | dict" attributeValue="Unset">
    Experimental options.

    These options are subject to change without notification, and stability is not guaranteed.
  </Attribute>

  ### layer\_pair\_depths

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.layer_pair_depths" attributeTypeHint="UnsetType | List[int]" attributeValue="Unset">
    The circuit depths (measured in number of pairs) to use in learning experiments.

    Pairs are used as the unit because we exploit the order-2 nature of our entangling gates in the noise learning implementation. A value of `3` would correspond to 6 layers of the layer of interest, for example. Default: (0, 1, 2, 4, 16, 32).
  </Attribute>

  ### max\_execution\_time

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.max_execution_time" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ### max\_layers\_to\_learn

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.max_layers_to_learn" attributeTypeHint="UnsetType | int | None" attributeValue="Unset">
    The max number of unique layers to learn.

    A `None` value indicates that there is no limit. If there are more unique layers present, then some layers will not be learned or mitigated. The learned layers are prioritized based on the number of times they occur, and for equally occurring layers are further sorted by the number of two-qubit gates in the layer. Default: 4.
  </Attribute>

  ### num\_randomizations

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.num_randomizations" attributeTypeHint="UnsetType | int" attributeValue="Unset">
    The number of random circuits to use per learning circuit configuration.

    A configuration is a measurement basis and depth setting. For example, if your experiment has six depths, and nine required measurement bases, then setting this value to 32 will result in a total of `32 * 9 * 6` circuits that need to be executed (at [`shots_per_randomization`](#qiskit_ibm_runtime.options.NoiseLearnerOptions.shots_per_randomization "qiskit_ibm_runtime.options.NoiseLearnerOptions.shots_per_randomization") each). Default: 32.
  </Attribute>

  ### shots\_per\_randomization

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.shots_per_randomization" attributeTypeHint="UnsetType | int" attributeValue="Unset">
    The total number of shots to use per random learning circuit.

    A learning circuit is a random circuit at a specific learning depth with a specific measurement basis that is executed on hardware. Default: 128.
  </Attribute>

  ### simulator

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.simulator" attributeTypeHint="SimulatorOptions | Dict" attributeValue="FieldInfo(annotation=Union[SimulatorOptions, Dict], required=False, default_factory=SimulatorOptions)" />

  ### twirling\_strategy

  <Attribute id="qiskit_ibm_runtime.options.NoiseLearnerOptions.twirling_strategy" attributeTypeHint="UnsetType | Literal['active', 'active-accum', 'active-circuit', 'all']" attributeValue="Unset">
    The twirling strategy in the identified layers of two-qubit twirled gates.

    The allowed values are:

    > *   `"active"`: in each individual twirled layer, only the instruction qubits are twirled.
    >
    > *   **`"active-circuit"`: in each individual twirled layer, the union of all instruction**
    >
    >     qubits in the circuit are twirled.
    >
    > *   **`"active-accum"`: in each individual twirled layer, the union of instructions qubits**
    >
    >     in the circuit up to the current twirled layer are twirled.
    >
    > *   `"all"`: in each individual twirled layer, all qubits in the input circuit are twirled.

    <Admonition title="Note" type="note">
      Barriers and delay instructions are ignored when determining whether a qubit is active.
    </Admonition>

    Default: “active-accum”.
  </Attribute>

  ## Methods

  ### update

  <Function id="qiskit_ibm_runtime.options.NoiseLearnerOptions.update" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.28/qiskit_ibm_runtime/options/options.py#L148-L168" signature="update(**kwargs)">
    Update the options.

    **Return type**

    `None`
  </Function>
</Class>

